css/site.css
body {
  background:#202020;
  color:#555;
  }
body,
textarea,
input {
  font-size:13px;
  line-height:20px;
  }
h1,h2,h3,h4,h5,h6 {
  font-weight:500;
  margin: 0;
  }
h1 {
  font-size:15px;
  line-height:22px;
  margin:0;
  }
small {
  font-size:11px;
  color:#a0a0a0;
  display:block;
  }
a       { color:#69AACA; }
a:hover { color: #337A9D; }
strong {
  font-weight:700;
  }
input[type=range] {
  background-color:#353535;
  height:40px;
  border-radius:0 0 0 3px;
  padding:0;
  margin:0;
  }
/* For whatever reason, these need to be defined
 * on their own so dont group them */
input[type=range]::-webkit-slider-thumb {
  background-color:#505050;
  background-image:url(../img/sprite@2x.png);
  background-repeat:no-repeat;
  background-size:80px 100px;
  background-position:0 -60px;
  height:40px;
  border-radius:0;
  }
input[type=range]::-ms-thumb {
  background-color:#505050;
  background-image:url(../img/sprite@2x.png);
  background-repeat:no-repeat;
  background-size:80px 100px;
  background-position:0 -60px;
  height:40px;
  border-radius:0;
  }
input[type=range]::-moz-range-thumb {
  background-color:#505050;
  background-image:url(../img/sprite@2x.png);
  background-repeat:no-repeat;
  background-size:80px 100px;
  background-position:0 -60px;
  height:40px;
  border-radius:0;
  }

/* Template classes
---------------------------------------------*/
.capitalize { text-transform:capitalize; }
.uppercase { text-transform:uppercase; }
.fill-white { background-color:#fff; }
.pill > * { border-color:#181818; }
.quiet { color:#aaa; }
.space-top2 { margin-top:20px; }
.space-top4 { margin-top:40px; }

[data-tooltip] {
  cursor:pointer;
  position:relative;
  }
[data-tooltip]:after {
  content:attr(data-tooltip);
  text-transform:capitalize;
  position:absolute;
  background:#181818;
  color:#fff;
  border-radius:3px;
  bottom:45px;
  display:none;
  padding:5px 10px;
  width:auto;
  left:-10px;
  text-align:center;
  z-index:1000;
  }
[data-tooltip]:before {
  content:'';
  display:block;
  border-left:5px solid transparent;
	border-right:5px solid transparent;
	border-top:5px solid #181818;
  display:none;
  position:absolute;
  bottom:40px;
  left:5px;
  z-index:1000;
  }
  [data-tooltip]:hover:before,
  [data-tooltip]:hover:after {
    display:block;
    }

.loading:after,
.loading:before {
  content:'';
  display:block;
  position:absolute;
  z-index:10;
  }
  .loading:before {
    background:transparent;
    left:0;
    top:0;
    width:100%;
    height:100%;
    }
  .loading:after {
    background:rgba(0,0,0,0.25) url(../img/loading.svg) 50% 50% no-repeat;
    left:50%;
    top:50%;
    margin:-20px 0 0 -20px;
    width:50px;
    height:50px;
    border-radius:50%;
    }

.sprite {
  background-image:url(../img/sprite@2x.png);
  background-repeat:no-repeat;
  background-size:80px 100px;
  display:block;
  }
  .sprite.logo {
    background-position:0 0;
    display:inline-block;
    text-indent:-999em;
    width:60px;
    height:60px;
    }
  .sprite.icon {
    display:inline-block;
    text-indent:-999em;
    width:20px;
    height:20px;
    vertical-align:middle;
    }
    .sprite.icon.map        { background-position:-60px 0; }
    .sprite.icon.picker     { background-position:-60px -20px; }
    .sprite.icon.plus       { background-position:-60px -40px; }
    .sprite.icon.minus      { background-position:-60px -60px; }
    .sprite.icon.clipboard  { background-position:-60px -80px; }

/* Color Picker
---------------------------------------------*/
.sidebar .button {
  background-color:#505050;
  color:#fff;
  }
.sidebar .button.zeroclipboard-is-hover,
.sidebar .button:hover {
  background-color:#666;
  }

.picker {
  width:580px;
  height:460px;
  margin-left:auto;
  margin-right:auto;
  }
.slider-output {
  position: absolute;
  right: 101%;
  margin-top: 10px;
  white-space: nowrap;
  }
.axis-select {
  position:absolute;
  left:-40px;
  top:0;
  }
  .axis-select {
    background:#353535;
    color:#808080;
    width:40px;
    text-transform:uppercase;
    border-bottom:1px solid #181818;
    }
    .axis-select .active {
      background:#505050;
      color:#fff;
      }
      .axis-option.hlc { border-radius: 2px 0 0 0; }
      .axis-option.hcl { border-radius: 0 0 0 2px; }

.z-axis-label {
  text-transform: uppercase;
  position: absolute;
  top:-27px;
  left: -5px;
  width: 20px;
  text-align: center;
  font-weight: bold;
  font-size: 12px;
  }

.sidebar {
  background:#353535;
  width:145px;
  height:500px;
  float:left;
  border-radius:0 2px 2px 0;
  position:relative;
  }
  .sidebar .output::-webkit-scrollbar {
    background: #353535;
    width: 15px;
    }
  .sidebar .output::-webkit-scrollbar-thumb {
    background: #505050;
    border-radius: 15px;
    border: 5px #353535 solid;
    }
  .sidebar .output:hover::-webkit-scrollbar-thumb {
    background: #949494;
    }

#grad, #colorscale, #bg {
  position:absolute;
  left:0;
  top:0;
  height:420px;
  }
#bg {
  background-image:url(../img/canvas.png);
  background-repeat:repeat;
  left:0;
  position:relative;
  width:420px;
  z-index:0;
  }
#colorspace {
  width:420px;
  height:420px;
  position:relative;
  }
#grad,
.drag_cont {
  left:-15px;
  top:-15px;
  width:440px;
  height:440px;
  }
#grad {
  z-index: 20;
  }
.drag_cont {
  position:absolute;
  z-index:50;
  }
.hexes {
  overflow:auto;
  overflow-x:hidden;
  padding-left:5px;
  line-height:30px;
  }
  .hexes > * {
    display:block;
    margin-left:5px;
    }
.output {
  overflow:auto;
  height:420px;
  }
  .output.with-select {
    height:380px;
    }
.output .swatch {
  width:40px;
  height:30px;
  }

.control,
.controls a {
  background:#505050;
  height:40px;
  }

.select-all {
  bottom:41px;
  }

.pill .round-bottomright { border-radius:0 0 3px 0; }
.pill .round-bottomleft { border-radius:0 0 0 3px; }
.drag {
  position:absolute;
  width:30px;
  height:30px;
  top:0;
  left:0;
  cursor:pointer;
  }

/*  The Map
 *  ------------------------------------------------------- */
#counties path {
  stroke:#353535;
  stroke-width:0.25px;
  }
.legend {
  background:#101010;
  position:fixed;
  }
  .legend .swatch {
    width:30px;
    height:10px;
    float:left;
    margin:5px 0 10px;
    }

